--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <title>METTI TITOLO</title>
+        <title>Vue Hello</title>
     </head>
     <body>
         <header>
-            header
+            <h1 id="app">{{ message }}</h1>
         </header>
         <main>
             main
@@ -16,6 +16,7 @@
         <footer>
             footer
         </footer>
+        <script src="https://unpkg.com/vue@3"></script>
         <script src="script.js"></script>
     </body>
 </html>
