--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     </head>
     <body>
         <header>
-            <h1 id="app">{{ message }}</h1>
+            header
         </header>
         <main>
-            main
+            <div id="app">
+                <h1>{{ message }}</h1>
+                <img :src="image" alt="Goku">
+              </div>
         </main>
         <footer>
             footer
